@@ -1,3 +1,5 @@
+- fixed crash with odd resolutions (2022/06/08 MS)
+
 1.2.4:
 - replaced DAS option with auto shift delay/speed options (2022/04/14 MS)
 - allow q key for controls (2021/11/05 MS) 
